Update README.md, include latest app changes and saved songs